# pytest-gitlab-code-quality

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: release.yml  validate.yml
src/pytest_gitlab_code_quality/: __init__.py  plugin.py  pytest_hooks.py
tests/: plugin_test.py
