[project]
name = "pytest-gitlab-code-quality"
version = "0.2.1"
authors = [{ name = "Niclas van Eyk", email = "niclas.eyk@gmail.com" }]
description = "Collects warnings while testing and generates a GitLab Code Quality Report."
classifiers = [
  "Framework :: Pytest",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pytest>=8.1.1"]

[dependency-groups]
dev = ["coverage>=7.6.8", "ruff>=0.8.0"]

[project.urls]
Homepage = "https://github.com/NiclasvanEyk/pytest-gitlab-code-quality"
Issues = "https://github.com/NiclasvanEyk/pytest-gitlab-code-quality/issues"
Changelog = "https://github.com/NiclasvanEyk/pytest-gitlab-code-quality/blob/main/CHANGELOG.md"

[project.entry-points.pytest11]
pytest-gitlab-code-quality = "pytest_gitlab_code_quality"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["src"]

[tool.ruff.lint]
preview = true
select = [
  "F",
  "I",
  "UP",
  "N",
  "YTT",
  "ANN",
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "C4",
  "DTZ",
  "T10",
  "EM",
  "FA",
  "LOG",
  "G",
  "INP",
  "PIE",
  "T20",
  "PT",
  "RSE",
  "RET",
  "SLF",
  "SIM",
  "TID",
  "PTH",
  "PLE",
  "FURB",
  "RUF",
]
ignore = ["PT013", "S101"]
