[project]
name = "pytest-gitlab-code-quality"
version = "0.2.1"
authors = [{ name = "Niclas van Eyk", email = "niclas.eyk@gmail.com" }]
description = "Collects warnings while testing and generates a GitLab Code Quality Report."
classifiers = [
  "Framework :: Pytest",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
]
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.9"
dependencies = ["pytest>=8.1.1"]

[dependency-groups]
dev = ["coverage>=7.6.8", "ruff>=0.8.0"]

[project.urls]
Homepage = "https://github.com/NiclasvanEyk/pytest-gitlab-code-quality"
Documentation = "https://github.com/NiclasvanEyk/pytest-gitlab-code-quality"
Repository = "https://github.com/NiclasvanEyk/pytest-gitlab-code-quality"
Issues = "https://github.com/NiclasvanEyk/pytest-gitlab-code-quality/issues"
Changelog = "https://github.com/NiclasvanEyk/pytest-gitlab-code-quality/blob/main/CHANGELOG.md"
Funding = "https://github.com/sponsors/NiclasvanEyk"

[project.entry-points.pytest11]
pytest-gitlab-code-quality = "pytest_gitlab_code_quality"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["src"]

[tool.ruff.lint]
preview = true
select = [
  "F",
  "I",
  "UP",
  "N",
  "YTT",
  "ANN",
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "C4",
  "DTZ",
  "T10",
  "EM",
  "FA",
  "LOG",
  "G",
  "INP",
  "PIE",
  "T20",
  "PT",
  "RSE",
  "RET",
  "SLF",
  "SIM",
  "TID",
  "PTH",
  "PLE",
  "FURB",
  "RUF",
]
ignore = ["PT013", "S101"]
